# audio-player-android

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
examples/: android_main.rs
src/: lib.rs  slint_app.rs
ui/: app.slint
