[package]
name = "rust-audio-player-android"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.13.1", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
rodio = { version = "0.21.1", features = ["symphonia-all"] }
symphonia = { version = "0.5.4", features = ["all"] }
rand = "0.8"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "fat"

[build-dependencies]
slint-build = { version = "1.13.1" }

[lib]
name = "rust_audio_player_android"
crate-type = ["cdylib", "staticlib", "rlib"]
required-features = []

[package.metadata.cargo-ndk]
targets = ["armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]
platform = 21