[package]
name = "rust-audio-player-android"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.13.1", default-features = false, features = ["backend-winit", "renderer-femtovg", "renderer-software", "compat-1-2"] }
rodio = { version = "0.21.1", features = ["symphonia-all"] }
symphonia = { version = "0.5.4", features = ["all"] }
rand = "0.9.2"
ndk-glue = { version = "0.7", optional = true }
log = "0.4"
android_logger = { version = "0.15", optional = true }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "fat"

[build-dependencies]
slint-build = { version = "1.13.1" }

[lib]
name = "rust_audio_player_android"
crate-type = ["cdylib", "staticlib", "rlib"]
required-features = []

[package.metadata.cargo-ndk]
targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
platform = 26

# Configure cargo-apk to build an installable APK
[package.metadata.android]
package = "com.milendenev.rustaudioplayer"
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]
assets = "assets"
apk_name = "rust-audio-player"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[package.metadata.android.application]
label = "Rust Audio Player"
debuggable = false
uses_cleartext_traffic = true

[package.metadata.android.application.activity]
label = "Rust Audio Player"
exported = true

[[example]]
name = "android_main"
path = "examples/android_main.rs"
crate-type = ["cdylib"]
required-features = ["android-entry"]

[features]
android-entry = ["ndk-glue", "android_logger"]